# anyMemo

./: README.md  docker-compose.yml
AlgorithmsAndDataStructures/data_structure/: menseki.py  menseki_sort.py  stack.py  tools.py
AlgorithmsAndDataStructures/search/: binary_search.py
AlgorithmsAndDataStructures/sort/: bubble_sort.py  insert_sort.py  selection_sort.py  shell_sort.py  stable_sort.py  tools.py
CodeWar/: kata_6_1.py  kata_6_2.py  kata_7_1.py  kata_7_2.py  kata_8_1.py
CodeWar/5kyu/: Directions_Reduction.py  Greed_is_Good.py  Human_Readable_Time.py  Moving_Zeros_To_The_End.py  RGB_To_Hex_Conversion.py  Scramblies.py  Simple_Pig_Latin.py  Valid_Parentheses.py  Weight_for_weight.py  Where_my_anagrams_at?.py
CodeWar/6kyu/: Array_combinations.py  BitCounting.py  Consecutive_strings.py  CountingDuplicates.py  Create_Phone_Number.py  Dashatize_it.py  Dubstep.py  DuplicateEncoder.py  FindTheParityOutlier.py  Find_the_odd_int.py  Generala_Dice_Game.py  JadenCasingStrings.py  (+12 more)
IntroductionToEffectivenessVerification/: README.md
IntroductionToMathematicalModels/: README.md
MySQLIntroduction/: docker-compose.yml  memo.md
TryAnything/fastapi_sql/: pyproject.toml
TryAnything/fastapi_sql/sql_app/: database.py  models.py  schemas.py  sql_app.db
TryPipline/kedro_tutorial/: Dockerfile  Memo.md  docker-compose.yml  pyproject.toml
TryPipline/kedro_tutorial/src/: hello_kedro.py
lesson/: REAME.md  section5.py
pythonLesson/: Dockerfile  README.md  REAME.md  docker-compose.yml  requirements.txt
sakai_algorythm/: Dockerfile  docker-compose.yml  pyproject.toml
(+209 files in other folders)
