[tool.poetry]
name = "fastapi_db"
version = "0.1.0"
description = ""
authors = ["ironball"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
typing = "^3.7.4"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
