[tool.poetry]
name = "my_kedro"
version = "0.1.0"
description = ""
authors = ["ironball"]

[tool.poetry.dependencies]
python = "3.8.5"
numpy = "^1.19.1"
pandas = "^1.1.1"
matplotlib = "^3.3.1"
jupyterlab = "^2.2.6"
kedro = "^0.16.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
